bugfix - z-index positive in sections

--- a/style.css
+++ b/style.css
@@ -80,9 +80,7 @@ body {
 }
 
 body {
-  /* position: relative;
-  z-index: -2; */
-
+  position: relative;
   font-family: sans-serif;
   font-size: 1.6rem; /* 10px * 1.6 = 16px padrão */
 
@@ -241,15 +239,12 @@ body.video .lightbox {
 /*=============== #HOME ===============*/
 
 #home {
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 31.87%,
-    rgba(0, 0, 0, 1) 61.86%
-  );
+  background: black;
   background-repeat: no-repeat;
   background-position-x: center;
   background-size: cover;
   position: relative;
+  z-index: 15;
 }
 
 #home .square {
@@ -271,7 +266,7 @@ body.video .lightbox {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* vai atrás dos elementos que estão no z: 0 padrão*/
+  z-index: 0; /* vai atrás dos elementos que estão no z: 0 padrão*/
   background: url(./assets/backgrounds/main-background-mobile.png);
   background-size: 190%;
   background-repeat: no-repeat;
@@ -286,12 +281,17 @@ body.video .lightbox {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: -2;
-  background: black;
+  z-index: 1;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 31.87%,
+    rgba(0, 0, 0, 1) 61.86%)
 }
 
 #home .wrapper {
   margin-bottom: 5rem;
+  position: relative;
+  z-index: 2;
 }
 
 #home .wrapper .play-button {
@@ -422,7 +422,7 @@ body.video .lightbox {
   position: relative;
   overflow-x: visible;
   padding-bottom: 10rem;
-  z-index: -1;
+  z-index: 14;
 }
 
 #segredos-ocultos::before {
@@ -497,7 +497,7 @@ body.video .lightbox {
 
 #influencia-profissao {
   position: relative;
-  z-index: -3;
+  z-index: 13;
   background: var(--white-cream);
   overflow-x: visible;
 }
@@ -586,7 +586,7 @@ body.video .lightbox {
   position: relative;
   overflow-x: visible;
   padding-bottom: 10rem;
-  z-index: -4;
+  z-index: 12;
 }
 
 #celebridade-digital .square {
@@ -677,7 +677,7 @@ body.video .lightbox {
   background: var(--white-cream);
   position: relative;
   overflow-x: visible;
-  z-index: 4;
+  z-index: 11;
 }
 
 #mercado-esperando h5 {
@@ -764,7 +764,7 @@ body.video .lightbox {
   background: var(--white-cream);
   position: relative;
   overflow-x: visible;
-  z-index: 2;
+  z-index: 10;
 
   padding-top: 5rem;
   padding-bottom: 7rem;
@@ -1466,6 +1466,7 @@ body.video .lightbox {
 
 #garantia {
   position: relative;
+  z-index: 2;
   overflow-x: visible;
   padding-bottom: 10rem;
 }
